# log-alerter

./: LICENSE  README.md  alerter.cabal  stack.yaml
src/: Main.hs
