-- For further documentation, see http://haskell.org/cabal/users-guide/

name:                alerter
version:             0.1.0.1
-- synopsis:
-- description:
license:             MIT
license-file:        LICENSE
author:              Covenant Eyes
maintainer:          elliot.cameron@covenanteyes.com
copyright:           2015 Covenant Eyes
category:            Development
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable alerter
  main-is:             Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:       base            >=4.7 && <5,
                       fsnotify        == 0.1.*,
                       system-filepath == 0.4.*,
                       process         == 1.2.*

  hs-source-dirs:      src
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings
  ghc-options:         -threaded -O2 -rtsopts -with-rtsopts=-N
                       -Wall -fwarn-tabs -funbox-strict-fields -fno-warn-orphans -fno-warn-unused-do-bind
